--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,15 @@
 {
-
     "name" : "workanyware/ipfo-php",
     "description" : "The PHP Library for IPFO",
+    "authors": [
+        {
+            "name": "Sam Nicholson",
+            "email": "snicholson@workanyware.co.uk"
+        }
+    ],
     "autoload": {
         "psr-4": {
-            "IPFO\\" : "src/"
+            "WorkAnyWare\\IPFO\\" : "src/"
         }
     },
     "config": {
